# yandex--music-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: actions.rs  app.rs  main.rs  ui.rs
src/inputs/: events.rs
src/io/: handler.rs  mod.rs
yandex-rust-music/: Cargo.toml
yandex-rust-music/src/: lib.rs
