[package]
name = "yandex-rust-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize"]
[dependencies]
rand = "0.8.4"
rodio = "0.15.0"
eyre = "0.6.8"
